--- a/src/Components/BytesMenu.css
+++ b/src/Components/BytesMenu.css
@@ -30,7 +30,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 1;
+    z-index: 100;
   }
   
   .bytes-nav .logo {
@@ -50,6 +50,7 @@
     font-weight: 400;
     letter-spacing: 0.05em;
     color: #fff;
+    transition: all 0.3s ease;
   }
   
   .hero {
@@ -108,17 +109,6 @@
     z-index: 2;
     pointer-events: none;
     box-sizing: border-box;
-  }
-  
-  .menu-nav {
-    position: fixed;
-    top: 2%;
-    left: 0;
-    padding: 1.6em 2em;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    z-index: 1;
   }
   
   .menu-img {
